add refitting examples to docs

--- a/doc/source/user_guide/pymc3_refitting_xr_lik.ipynb
+++ b/doc/source/user_guide/pymc3_refitting_xr_lik.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Refitting PyMC3 models with ArviZ\n",
+    "# Refitting PyMC3 models with ArviZ (and xarray)\n",
     "\n",
     "ArviZ is backend agnostic and therefore does not sample directly. In order to take advantage of algorithms that require refitting models several times, ArviZ uses `SamplingWrappers` to convert the API of the sampling backend to a common set of functions. Hence, functions like Leave Future Out Cross Validation can be used in ArviZ independently of the sampling backend used."
    ]
